# shopping-list-dioxus

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
migrations/: 20231206060817_create_shopping_lists_table.down.sql  20231206060817_create_shopping_lists_table.up.sql
public/: manifest.json
src/: common_types.rs  dialog_wrapper.rs  item_listing_page.rs  main.rs  postgres.rs  shopping_lists_page.rs  style.css
src/assets/: style.css
