[package]
name = "shoppinng-list-dioxus"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
dioxus-web = { version = "0.4.0", features = ["hydrate"], optional = true }
dioxus = { version = "0.4.0" }
dioxus-router = { version = "0.4.0" }
dioxus-fullstack = { version = "0.4.0", features = ["router"] }
axum = { version = "0.6.12", optional = true }
tokio = { version = "1.34.0", features = ["full"], optional = true }
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"], optional = true }
dioxus-logger = "0.4.1"
log = "0.4.20"

[features]
default = []
ssr = ["axum", "dioxus-fullstack/axum", "sqlx", "tokio"]
web = ["dioxus-fullstack/web", "dioxus-router/web"]

